...
        setupObserver()
        setupProfile()
        setupAvatar()
    }
    
    func logoutButtonPressed() {
        let alert = Alert(id: "logoutAlert", title: "Пока, пока!",
                          message: "Уверены, что хотите выйти?",
                          buttons: [
                            .default(text: "Да", id: "Yes", action: { [weak self] in
                                guard let self else { return }
                                OAuth2TokenStorage().deleteToken()
                                self.clean()
                                delegate?.showSplashVC()
                                
        }),
...
